assets/css/style.css
/* Google Fonrts */
@import url('https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles:wght@700&family=Pacifico&display=swap');

/* Initial Resets */
body {
  padding: 0;
  margin: 0;
  font-family: Pacifico, 'sans-serif';
  list-style: none;
  text-decoration: none;
  text-align: center;
}

h1,
h2,
p {
  padding: 0;
  margin: 0;
  font-weight: 100;
}

/* Header section */
header {
  width: 100%;
  height: 10vh;
  background-color: #000;
  color: #fff;
}

header img {
  display: inline-block;
  height: inherit;
}

header h1 {
  display: inline-block;
  margin: 0 10vw;
  height: inherit;
  vertical-align: top;
  font-size: 5vh;
}

/* Intro prompt section */
#intro-section h1 {
  font-weight: 100;
  font-size: 5vh;
  border-bottom: 0.25em solid #000;
  padding: 0.25em;
}

.intro-label {
  display: block;
  font-size: 3vh;
  margin: 1vh;
}

#intro-error {
  color: #c00;
}

#input-username {
  display: block;
  font-size: 3vh;
  font-family: inherit;
  font-weight: inherit;
  margin: 1vh auto;
  padding: 10px;
  width: 40%;
  text-align: center;
  border: 0.25em solid #000;
  border-radius: 0.5em;
}

#input-cookies {
  transform: scale(200%);
  cursor: pointer;
}

#intro-play {
  width: fit-content;
  font-size: 4vh;
  border: 0.25em solid #000;
  border-radius: 0.75em;
  padding: 0.25em;
  box-sizing: border-box;
  margin: 1vh auto;
  cursor: pointer;
}

#intro-play:hover {
  color: #fff;
  background-color: #000;
  border-radius: 0.75em;
}

#intro-play:active {
  border-color: #fff;
}

#intro-reset {
  font-size: 2vh;
  border: 0.25em solid #000;
  border-radius: 0.5em;
  width: fit-content;
  padding: 5px;
  margin: 1vh auto;
}

#intro-reset:hover {
  background-color: #000;
  color: #fff;
}

#intro-reset:active {
  border-color: #fff;
}

/* Popup section */
#popup-section {
  width: fit-content;
  margin: 2vh auto;
  columns: 2;
}

#popup-section h2 {
  font-size: 3vh;
  border: 0.25em solid #000;
  border-radius: 0.75em;
  padding: 0.25em;
  box-sizing: border-box;
}

#popup-section h2:hover {
  color: #fff;
  background-color: #000;
  border-radius: 0.75em;
}

#popup-section h2:active {
  border-color: #fff;
}

/* Game score section */
#score-section h2 {
  font-size: 3vh;
}

/* Game game area */
#game-section {
  width: 100px;
  height: 100px;
  margin: 0 auto;
  border: 0.25em solid #000;
  border-radius: 0.5em;
  box-sizing: border-box;
  font-size: 3vh;
}

/* Game controls area */
#controls-section {
  font-size: 4.5vh;
  line-height: 6vh;
  position: fixed;
  bottom: 4vh;
  width: 100%;
}

.control-bottom {
  display: inline-block;
}

/* Footer - tips */
footer {
  position: fixed;
  bottom: 0;
  width: 100%;
  height: 4vh;
  line-height: 4vh;
  text-align: left;
  background-color: #000;
  color: #fff;
  overflow: hidden;
}

#tips {
  padding: 0 1vw;
  font-size: 2vh;
  width: fit-content;
}

.tips-animation {
  transform: translateX(100%);
  animation: tipanimation 10 linear;
}

@keyframes tipanimation {
  from {
    transform: translateX(100vw);
  }

  to {
    transform: translateX(-100%);
  }
}

